--- a/accounts/jeremy.yaml
+++ b/accounts/jeremy.yaml
@@ -1,12 +1,13 @@
 email: morel.jeremy@gmail.com
-fullname: Jeremy
+fullname: 'Jérémy Morel'
 title: Administrator
 state: enabled
 access:
   admin:
-    login: true
-    super: true
+    super: 'true'
+    login: 'true'
   site:
-    login: true
+    login: 'true'
 hashed_password: $2y$10$23a.u28UkFLKcxGoCRjWSOuCM7lsZQJDi9ND5sPQNi4Dh4cNZ8T1u
 reset: '9f6f66faf53cb33652d14ebe694e54ab::1481802581'
+language: fr
