--- a/config/themes/boiteacycler.yaml
+++ b/config/themes/boiteacycler.yaml
@@ -8,4 +8,4 @@ footer_columns:
   -
     content: "### Adhérents et bénévoles\r\n\r\n[Un site](http://) est dédié à l'organisation de toutes les activités de l'association. L'accès est privé, si vous n'y avez pas encore accès n'hésitez pas à nous relancer."
 google_webmaster_tools_id: 0CY7SekIV4chY46zydcRPoV0Da0hNKiHEfIwndFuqx8
-mailinglist_subscribe_url: 'http://example.org/mailman/subscribe/XYZ'
+mailinglist_subscribe_url: '//laboiteacycler.us15.list-manage.com/subscribe/post?u=296ddcc396b060d8a41dd562e&amp;id=7aef20c86b'
