--- a/config/themes/boiteacycler.yaml
+++ b/config/themes/boiteacycler.yaml
@@ -6,6 +6,6 @@ footer_columns:
   -
     content: "### Contact\r\n\r\nVous pouvez bien évidemment [nous écrire](mailto:contact@laboiteacycler.org) mais nous préférons rencontrer les gens lors des nombreux événements et discuter de vive voix !"
   -
-    content: "### Adhérents et bénévoles\r\n\r\n[Un site](http://) est dédié à l'organisation de toutes les activités de l'association. L'accès est privé, si vous n'y avez pas encore accès n'hésitez pas à nous relancer."
+    content: "### Adhérents et bénévoles\r\n\r\n[Un site](http://) est dédié à l'organisation de toutes les activités de l'association. L'accès est privé, si vous n'y avez pas encore accès n'hésitez pas à nous relancer.\r\n\r\n[Accéder à l'administration du site](/admin)."
 google_webmaster_tools_id: 0CY7SekIV4chY46zydcRPoV0Da0hNKiHEfIwndFuqx8
 mailinglist_subscribe_url: '//laboiteacycler.us15.list-manage.com/subscribe/post?u=296ddcc396b060d8a41dd562e&amp;id=7aef20c86b'
