--- a/accounts/echardon.yaml
+++ b/accounts/echardon.yaml
@@ -1,11 +1,11 @@
 email: er78.char@gmail.com
 access:
   admin:
-    login: true
-    super: true
+    super: 'true'
+    login: 'true'
   site:
-    login: true
+    login: 'true'
 fullname: 'Eric Chardon'
-title: null
 state: enabled
-hashed_password: $2y$10$xr8Kf6QRbUKPeKEn7bsclOtARlLIyZLqucHkai/VA4tc7JtWJBEam
+hashed_password: $2y$10$6WQcaCLVwGtQtYCnhE7S1.hK2Fa5ROf4UYxFBfGEUIzUOaIW/OIeu
+language: fr
