--- a/config/system.yaml
+++ b/config/system.yaml
@@ -75,6 +75,7 @@ cache:
     method: file
   driver: auto
   prefix: g
+  cli_compatibility: false
   lifetime: 604800
   gzip: false
   allow_webserver_gzip: false
@@ -101,7 +102,7 @@ assets:
   collections:
     jquery: 'system://assets/jquery/jquery-2.x.min.js'
 errors:
-  display: false
+  display: '0'
   log: true
 debugger:
   enabled: false
