--- a/config/themes/boiteacycler.yaml
+++ b/config/themes/boiteacycler.yaml
@@ -2,7 +2,7 @@ enabled: true
 tagline: 'Atelier vélo participatif libre et ouvert'
 footer_columns:
   -
-    content: "### Association\r\n\r\n[La boite à Cycler](/) est une association Loi 1901.\r\n\r\n* [Statuts](/statuts)\r\n* [Réglement intérieur](/reglement-interieur)"
+    content: "### Association\r\n\r\n[La boite à Cycler](/) est une association Loi 1901.\r\n\r\n* [Statuts](/statuts)\r\n* [Réglement intérieur](/reglement-interieur)\r\n* [Adhérer à l'association](/bulletin-d-adhesion)"
   -
     content: "### Contact\r\n\r\nVous pouvez bien évidemment [nous écrire](mailto:contact@laboiteacycler.org) mais nous préférons rencontrer les gens lors des nombreux événements et discuter de vive voix !"
   -
