--- a/config/themes/boiteacycler.yaml
+++ b/config/themes/boiteacycler.yaml
@@ -6,5 +6,11 @@ footer_columns:
   -
     content: "### Contact\r\n\r\nVous pouvez bien évidemment [nous écrire](mailto:contact@laboiteacycler.org) mais nous préférons rencontrer les gens lors des nombreux événements et discuter de vive voix !"
   -
-    content: "### Adhérents et bénévoles\r\n\r\n[Un site](http://) est dédié à l'organisation de toutes les activités de l'association. L'accès est privé, si vous n'y avez pas encore accès n'hésitez pas à nous relancer.\r\n\r\n[Accéder à l'administration du site](/admin)."
+    content: "### Adhérents et bénévoles\r\n\r\n2 listes de diffusion vous sont réservées, l'une pour tous les adhérents, l'autre pour les adhérents bénévoles. \r\nSi vous n'y avez pas été inscrits lors de votre adhésion, [rappelez-le nous par email](mailto:contact@laboiteacycler.org).\r\n\r\n[Accéder à l'administration du site](/admin)."
 google_webmaster_tools_id: 0CY7SekIV4chY46zydcRPoV0Da0hNKiHEfIwndFuqx8
+background:
+  user/themes/boiteacycler/assets/P1080646-2000px-50p.jpg:
+    name: P1080646-2000px-50p.jpg
+    type: image/jpeg
+    size: 704893
+    path: user/themes/boiteacycler/assets/P1080646-2000px-50p.jpg
